# askpdf

./: .gitignore  A2DP_v1.4.txt  BUILD_GUIDE.md  BUILD_REPORT.md  BUILD_SUCCESS.md  DEPENDENCIES_SOLUTION.md  DEPLOYMENT.md  ENCODING_FIX.md  ENCODING_FIXED.md  EXECUTABLE_BUILD.md  GITHUB_ACTIONS_GUIDE.md  GITHUB_SETUP_STEPS.txt  HOW_TO_RUN.md  IMAGE_SCALING_GUIDE.md  IMPORT_FIX.md  IMPORT_FIXED_SUMMARY.md  INDEX.md  LAUNCH_REFERENCE.md  MULTIPLATFORM_BUILD.md  PDFReader.spec  PYQT5_FIXED.md  QUICK_START.md  README.md  SOLUTION_COMPLETE.md  START_GUI_FIX.md  build.py  build_executable.bat  build_executable.sh  build_multiplatform.py  build_simple.py  check_dependencies.py  create_icon.py  index.html  install_dependencies.bat  launch_gui.py  main.js  package.json  pdf_reader_gui.spec  preload.js  push_to_github.sh  (+16 more)
.github/workflows/: build-executables.yml
src/pdf_reader/: __init__.py  app.py  cli.py  gui.py
